--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -98,3 +98,6 @@ jobs:
         with:
           snap: ${{ steps.snap.outputs.snap }}
           release: edge
+:
+          snap: ${{ steps.snap.outputs.snap }}
+          release: edge
