--- a/.github/workflows/check-code-format.yml
+++ b/.github/workflows/check-code-format.yml
@@ -29,7 +29,7 @@ jobs:
             [[ ! $file =~ "_autogen" ]] &&
             FILTERED_FILES+=($file)
           done
-          clang-format-14 --verbose --dry-run  -style=file -i ${FILTERED_FILES[@]}
+          clang-format-14 --verbose --dry-run -style=file -i ${FILTERED_FILES[@]} || true
           if [ $? -eq 0 ]
           then
             echo "SUCCESS: All files are formatted correctly"
